k8s/demo-replica.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: sujit-nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sujit-nginx-app
  template:
    metadata:
      labels:
        app: sujit-nginx-app
    spec:
      containers:
      - name: sujit-nginx-app
        image: nginx:1.14.2
        ports:
        - containerPort: 80

apiVersion: v1
kind: Service
metadata:
  name: sujit-lb-service
spec:
  type: NodePort
  selector:
     app: sujit-nginx-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32007
