k8s/hapi-replica.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hapi-deployment
  labels:
    app: sujit-hapi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sujit-hapi-app
  template:
    metadata:
      labels:
        app: sujit-hapi-app
    spec:
      containers:
      - name: sujit-hapi-app
        image: public.ecr.aws/p9h7s8r8/sujit-02may-hapi-server:v1.0.0
        ports:
        - containerPort: 80

apiVersion: v1
kind: Service
metadata:
  name: sujit-lb-hapi-service
spec:
  type: NodePort
  selector:
     app: sujit-hapi-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32008
