k8s/micro1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro1-deployment
  labels:
    app: micro1-hapi-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: micro1-hapi-app
  template:
    metadata:
      labels:
        app: micro1-hapi-app
    spec:
      containers:
      - name: micro1-hapi-app
        image: public.ecr.aws/p9h7s8r8/sujit-02may-micro1:v1.0.0
        ports:
        - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: sujit-lb-m1-service
spec:
  selector:
     app: micro1-hapi-app
  ports:
    - port: 8080
