k8s/ingress-v1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sujit-ingress-01
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
          - path: /v1/api
            pathType: Prefix
            backend:
              service:
                name: sujit-lb-m1-service
                port:
                  number: 8080
          - path: /v2/api
            pathType: Prefix
            backend:
              service:
                name: sujit-lb-m2-service
                port:
                  number: 8080
          - path: /web-app
            pathType: Prefix
            backend:
              service:
                name: sujit-lb-f1-service
                port:
                  number: 80
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: sujit-lb-f2-service
                port:
                  number: 80
